# model-runtime

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: api.py  api_types.py  app.py  config.py  core.py  finetuning.py  finetuning_api.py  health.py  s3.py  streamer.py  types.py  utils.py
app/models/: dollyv2_large_lm.py  dollyv2_lm.py  e5_large.py  e5_large_v2.py  e5_utils.py  embedding_lm.py  finetuned_lm.py  instruct_pipeline.py  llama2_chat.py  lm.py  mistral_runner.py  mlp_instruct_7b_lm.py  redpajama_instruct_lm.py  text_generation_lm.py
app/models/cpu/: cli_lm.py  gpt4all_13_snoozy_cpu.py  llama2_chat_cpu.py  ollama.py
app/models/falcon/: config.json  configuration_RW.py  falcon_lm.py  modelling_RW.py
